# iris

./: .gitignore  .mise.toml  .oxfmtrc.json  .oxlintrc.json  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  package.json  vite.config.ts
.github/: pull_request_template.md
.github/workflows/: ci.yml  performance.yml  pr-metadata.yml
apps/rn-bench/: App.tsx  README.md  app.json  jest.config.js  metro.config.js  package.json
apps/rn-bench/__tests__/: benchmarkHarness.test.ts  turboModuleCases.test.ts
apps/rn-bench/android/: settings.gradle
apps/rn-bench/android/app/: build.gradle
apps/rn-bench/android/app/src/hermes/java/com/iris/bench/: EngineRuntimeFactory.kt
apps/rn-bench/android/app/src/hermes/java/com/iris/bench/hermes/: MainActivity.kt  MainApplication.kt
apps/rn-bench/android/app/src/hermesBridge/java/com/iris/bench/: EngineRuntimeFactory.kt  IrisBridgeTurboModule.kt
apps/rn-bench/android/app/src/hermesBridge/java/com/iris/bench/hermesbridge/: MainActivity.kt  MainApplication.kt
apps/rn-bench/android/app/src/iris/java/com/iris/bench/: EngineRuntimeFactory.kt
apps/rn-bench/android/app/src/iris/java/com/iris/bench/iris/: MainActivity.kt  MainApplication.kt
apps/rn-bench/android/app/src/main/: AndroidManifest.xml
apps/rn-bench/android/app/src/main/java/com/iris/bench/: IrisBenchPackage.kt  IrisBenchTurboModule.kt  MainActivity.kt  MainApplication.kt
apps/rn-bench/android/app/src/main/res/values/: strings.xml
apps/rn-bench/android/iris-bridge/: build.gradle
apps/rn-bench/android/iris-bridge/src/main/cpp/: CMakeLists.txt  IrisBridgeBindings.cpp  IrisBridgeBindings.h  OnLoad.cpp
apps/rn-bench/android/iris-engine/: build.gradle
apps/rn-bench/android/iris-engine/src/main/cpp/: CMakeLists.txt  IrisRuntime.cpp  IrisRuntime.h  JIrisJSRuntimeFactory.cpp  JIrisJSRuntimeFactory.h  OnLoad.cpp
apps/rn-bench/android/iris-engine/src/main/java/com/iris/engine/react/: IrisJSRuntimeFactory.kt  IrisJSRuntimeFactoryProvider.kt
apps/rn-bench/ios/: Podfile
apps/rn-bench/ios/IrisBench/: AppDelegate.swift  Info.plist  IrisBenchTurboModule.h  IrisBenchTurboModule.mm  LaunchScreen.storyboard
apps/rn-bench/ios/IrisBench.xcodeproj/: project.pbxproj
apps/rn-bench/ios/IrisBench.xcodeproj/xcshareddata/xcschemes/: IrisBench.xcscheme
apps/rn-bench/ios/IrisBench.xcworkspace/: contents.xcworkspacedata
apps/rn-bench/src/benchmarks/: cases.ts  harness.ts  irisBridgeCases.ts  metadata.ts  statistics.ts  turboModuleCases.ts  types.ts
apps/rn-bench/src/native/: IrisBenchTurboModule.ts  IrisBridgeTurboModule.ts  NativeIrisBenchTurboModule.ts  NativeIrisBridgeTurboModule.ts
crates/iris-android/: Cargo.toml
crates/iris-android/src/: lib.rs
crates/iris-core/: Cargo.toml
crates/iris-core/src/: lib.rs
crates/iris-hbc/: Cargo.toml
crates/iris-hbc/src/: lib.rs
crates/iris-jsi/: Cargo.toml
crates/iris-jsi/src/: lib.rs
crates/iris-qjs/: Cargo.toml
crates/iris-qjs/src/: lib.rs
docs/: benchmarks.md  development-commands.md  engine-strategy.md  iris-android-engine-contract.md  labels.md  performance-budget.md  pr-checklist.md  project-rules.md  project-structure.md  react-native-poc.md  references.md  turbomodule-baseline.md
tools/: build-android-rust.sh  fetch-references.sh  sync-labels.sh
tools/bench/: compare-strict-hbc-engine-artifacts.ts  extract-hermes-report.ts  run-android-engine-comparison.ts  run-android-release-benchmark.ts  run-js-baseline.ts  run-strict-hbc-engine-comparison-repeat.ts  run-strict-hbc-engine-comparison.ts  run-strict-hbc-profile.ts  run-strict-hbc-timing-profile.ts  runtime-lanes.ts  strict-rn-benchmark-contract.ts  write-android-local-performance-report.ts  write-android-runtime-lane-report.ts
tools/bench/fixtures/: hermes-android-release.txt  hermes-metro.txt  hermes-release.txt
tools/bench/strict-hbc/: hermes-runner.cpp
tools/bench/strict-hbc/cases/: branch-loop.js  global-access-diagnostic.js  global-access-lexical-diagnostic.js  js-compute-lexical.js  js-compute.js  json-round-trip.js  math-call-bound-diagnostic.js  math-lookup-bound-diagnostic.js  math-lookup-diagnostic.js  numeric-loop-lexical.js  numeric-loop.js  object-traversal.js  property-loop-lexical.js  property-loop.js  typed-array-copy-lexical.js  typed-array-copy.js
tools/perf/: core-budget.sh
