[workspace]
members = ["crates/iris-core", "crates/iris-hbc", "crates/iris-jsi", "crates/iris-qjs"]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/ohah/iris"
rust-version = "1.96.0"
version = "0.0.0"

[workspace.lints.rust]
missing_docs = "warn"
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"

[workspace.dependencies]
cxx = "1.0.194"
iris-core = { path = "crates/iris-core" }
iris-hbc = { path = "crates/iris-hbc" }
