[package]
name = "iris-hbc"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
crate-type = ["rlib", "staticlib"]

[dependencies]
cxx.workspace = true

[lints.rust]
missing_docs = "warn"
# cxx::bridge generates the unsafe FFI glue; handwritten parser code stays safe.
unsafe_code = "allow"

[lints.clippy]
all = "warn"
pedantic = "warn"
