[package]
name = "iris-qjs"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
crate-type = ["rlib", "staticlib"]

[dependencies]
cxx.workspace = true
iris-core.workspace = true
rquickjs.workspace = true
serde.workspace = true
serde_json.workspace = true

[lints.rust]
missing_docs = "warn"
# cxx::bridge generates the unsafe FFI glue; handwritten QuickJS code stays safe.
unsafe_code = "allow"

[lints.clippy]
all = "warn"
pedantic = "warn"
